Fix Background image on Mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,6 @@ p, li {
 
 	.jumbotron {
   background-image: url("../img/mobilelanding.jpg");
-  background-repeat: no-repeat;
   background-position: center; 
 	}
 
